--- a/curriculoHellen.css
+++ b/curriculoHellen.css
@@ -106,6 +106,7 @@ nav ul li a:active{
   
   #caract{
       margin: 30px;
+      margin-top: 0px;
       flex: 3;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
