--- a/curriculoSara.css
+++ b/curriculoSara.css
@@ -60,6 +60,7 @@ transform: translateY(4px);
 
 #caract{
     margin: 30px;
+  margin-top: 0px;
     flex: 3;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
