--- a/curriculoSara.css
+++ b/curriculoSara.css
@@ -1,118 +1,26 @@
 body{
   background-color: white;
   padding: 10px;
+  margin: auto;
 }
 
 header{
     background-color: #800000;
     color: white;
     text-shadow: 0 3px #660000;
-    font-size:  40px;
+    font-size:  30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 30px 30px 20px 30px;
-}
-
-
-.botao:active{
-  background-color: #660000;
-box-shadow: 0 5px #1a0000;
-transform: translateY(4px);
-}
-
-#aluno{
-  cursor: not-allowed;
-  background-color: white;
-  color: #a52a2a;
-  border: 2px solid #a52a2a;
-  border-radius: 24px;
-  font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-transform: uppercase;
-  display: inline-block;
-  box-shadow: 0 3px #800000;
-  padding: 15px;
-  font-weight: 500;
-}
-
-.foto{
-  border-radius: 50%;
-    border-style: solid;
-    border-color: #800000;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    background-position: center;
-}
-
-#hrdiferent{
-  opacity: 0;
-}
-
-#pagina{
-  display: flex;
-  margin: 30px;
-}
-
-#perfil{
-  flex: 1;
-}
-
-#caract{
-    margin: 30px;
-  margin-top: 0px;
-    flex: 3;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-  hr{
-    border: 0.5px solid #800000;
-    margin: 0px 10px 0px 10px;
-    position: static;       
-} 
-
-.horizont{
-  border: 1px solid #800000;
-  margin: 0px 30px 0px 30px;
-}
-
-#dados{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align-last: center;
-}
-
-.lista{
-  font-weight: 5000;
-  text-align: left;
-}
-
-.local{
-  font-weight: 500;
-}
-
-
-
-.estudos{
-  display: flex;
-}
-
-.educa{
-  text-align-last: center;
-    font-size: 1vw;
-    flex: 25%;
-    margin-bottom: 1vw;
-}
-
-p{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #lista{
   width: 50%;
   margin: auto;
   text-align: center;
-  padding: 10px;
+  padding: 0px;
+  
 }
+
 nav ul li {
   list-style: none;
   display: inline;
@@ -155,14 +63,98 @@ nav li form{
 }
 
 nav ul li a:active{
-  background-color: #660000;
-  box-shadow: 0 5px #1a0000;
-  transform: translateY(4px);
+background-color: #660000;
+box-shadow: 0 5px #1a0000;
+transform: translateY(4px);
 }
 
-footer{
-  padding-top: 30px;
+#aluno{
+  cursor: not-allowed;
+  background-color: white;
+  color: #a52a2a;
+  border: 2px solid #a52a2a;
+  border-radius: 24px;
+  font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #800000;
+  text-transform: uppercase;
+  display: inline-block;
+  box-shadow: 0 3px #800000;
+  padding: 15px;
+  font-weight: 500;
+}
+
+.button{
+  display: flex;
+  text-align-last: center;
+}
+
+
+.foto{
+  border-radius: 50%;
+    border-style: solid;
+    border-color: #800000;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    background-position: center;
+}
+
+
+
+#pagina{
+  display: flex;
+  margin: 30px;
+}
+
+#perfil{
+  flex: 1;
+}
+
+#caract{
+    margin: 30px;
+    padding: 10px;
+    margin-top: 0px;
+    flex: 3;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#dados{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align-last: center;
+}
+
+.lista{
+  font-weight: 5000;
+  text-align: left;
+  color:black ;
+}
+
+.local{
+  font-weight: 500;
+}
+
+
+.estudos{
+  display: flex;
+}
+
+.educa{
+  text-align-last: center;
+    font-size: 1vw;
+    flex: 25%;
+    margin-bottom: 1vw;
+}
+
+p{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+ 
+footer{
+  padding-top: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color:black;
   text-align: center;
 }
