--- a/contato.css
+++ b/contato.css
@@ -84,8 +84,17 @@ transform: translateY(4px);
 }
 
 .button{
-  display: flex;
-  text-align-last: center;
+    display: flex;
+    text-align-last: center;
+    background-color: #a52a2a;
+    border-radius: 24px;
+    border: 2px solid #a52a2a;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    box-shadow: 0 3px #800000;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 
