--- a/contato.css
+++ b/contato.css
@@ -1,89 +1,83 @@
 body{
-  background-color: white;
-  padding: 10px;
-  margin: auto;
+    background-color: white;
+    color: black;
+    padding: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 10px;
+    border: none;
 }
 
 header{
     background-color: #800000;
+    padding: 30px;
+    font-size: 40px;
     color: white;
-    text-shadow: 0 3px #660000;
-    font-size:  30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 30px 30px 20px 30px;
-}
-
-#lista{
-  width: 50%;
-  margin: auto;
-  text-align: center;
-  padding: 0px;
-  
+    text-shadow: 0 4px #800000;
 }
 
 nav ul li {
-  list-style: none;
-  display: inline;
-  padding: 10px;
-  margin: auto;
+    list-style: none;
+    display: inline;
+    padding: 10px;
+    margin: auto;
 }
-
-nav ul li a{
-  background-color: white;
-  border-radius: 24px;
-  border:2px solid #a52a2a;
-  font-size: 14px;
-  color: #800000;
-  display: inline-block;
-  padding: 15px;
-  text-transform: uppercase;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
-  cursor: pointer;
-  box-shadow: 0 5px #800000;
-  text-decoration: none;
+  
+  nav ul li a{
+    background-color: white;
+    border-radius: 24px;
+    border:2px solid #a52a2a;
+    font-size: 14px;
+    color: #800000;
+    display: inline-block;
+    padding: 15px;
+    text-transform: uppercase;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 0 5px #800000;
+    text-decoration: none;
+  }
+  
+  nav ul li a:hover {
+    background-color: #800000;
+    border-radius: 24px;
+    border:none;
+    font-size: 14px;
+    color: white;
+    display: inline-block;
+    padding: 15px;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0 5px #800000;
+    text-align-last: center;
+  }
+  
+  nav li form{
+    display: inline block
 }
-
-nav ul li a:hover {
-  background-color: #800000;
-  border-radius: 24px;
-  border:none;
-  font-size: 14px;
-  color: white;
-  display: inline-block;
-  padding: 15px;
-  text-transform: uppercase;
-  cursor: pointer;
-  box-shadow: 0 5px #800000;
-  text-align-last: center;
-}
-
-nav li form{
-  display: inline block
-}
-
+  
 nav ul li a:active{
-background-color: #660000;
-box-shadow: 0 5px #1a0000;
-transform: translateY(4px);
+  background-color: #660000;
+  box-shadow: 0 5px #1a0000;
+  transform: translateY(4px);
 }
 
 #aluno{
-  cursor: not-allowed;
-  background-color: white;
-  color: #a52a2a;
-  border: 2px solid #a52a2a;
-  border-radius: 24px;
-  font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-transform: uppercase;
-  display: inline-block;
-  box-shadow: 0 3px #800000;
-  padding: 15px;
-  font-weight: 500;
+    cursor: not-allowed;
+    background-color: white;
+    color: #a52a2a;
+    border: 2px solid #a52a2a;
+    border-radius: 24px;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    display: inline-block;
+    box-shadow: 0 5px #800000;
+    padding: 15px;
+    font-weight: 500;
 }
 
-.button{
+button{
     display: flex;
     text-align-last: center;
     background-color: #a52a2a;
@@ -96,74 +90,48 @@ transform: translateY(4px);
     text-align: center;
     text-transform: uppercase;
 }
+#hrdiferent{
+    opacity: 0;
+}
 
+fieldset{
+    border: none;
+}
 
-.foto{
-  border-radius: 50%;
+legend{
+    font-size: 30px;
+}
+
+#textname{
+    border-radius: 4px;
+    width: 300px;
+    size: 300px;
+    padding: 5px;
+    border-color: grey;
+}
+
+select{
+    border-radius: 4px;
+    width: 310px;
+    size: 300px;
+    padding: 5px;
+    border-color: grey;
     border-style: solid;
-    border-color: #800000;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    background-position: center;
+    box-shadow: 2px 1px;
 }
 
-
-
-#pagina{
-  display: flex;
-  margin: 30px;
+textarea{
+    border-radius: 4px;
+    padding: 5px;
+    border-color: grey;
+    box-shadow: 2px 1px;
+    width: 300px;
 }
 
-#perfil{
-  flex: 1;
-}
-
-#caract{
-    margin: 30px;
-    padding: 10px;
-    margin-top: 0px;
-    flex: 3;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#dados{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align-last: center;
-}
-
-.lista{
-  font-weight: 5000;
-  text-align: left;
-  color:black ;
-}
-
-.local{
-  font-weight: 500;
-}
-
-
-.estudos{
-  display: flex;
-}
-
-.educa{
-  text-align-last: center;
-    font-size: 1vw;
-    flex: 25%;
-    margin-bottom: 1vw;
-}
-
-p{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
- 
 footer{
-  padding-top: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color:black;
-  text-align: center;
+    padding-top: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #800000;
+    text-align: center;
+    
 }
