--- a/Index.css
+++ b/Index.css
@@ -58,6 +58,21 @@ nav ul li a:active{
     transform: translateY(4px);
 }
 
+#aluno{
+    cursor: not-allowed;
+    background-color: #b30000;
+    color: white;
+    border: 2px solid #a52a2a;
+    border-radius: 24px;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+    display: inline-block;
+    box-shadow: 0 5px #800000;
+    padding: 15px;
+    font-weight: 500;
+}
+
 header{
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
