--- a/contato.css
+++ b/contato.css
@@ -129,9 +129,9 @@ textarea{
 }
 
 footer{
-    padding-top: 30px;
+    padding-top: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #800000;
+    color: black;
     text-align: center;
     
 }
