--- a/contato.css
+++ b/contato.css
@@ -1,18 +1,28 @@
 body{
     background-color: white;
     color: black;
-    padding: 0px;
+    padding: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 10px;
+    margin: auto;
     border: none;
 }
 
 header{
     background-color: #800000;
-    padding: 30px;
-    font-size: 40px;
     color: white;
-    text-shadow: 0 4px #800000;
+    text-shadow: 0 3px #660000;
+    font-size:  30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 30px 30px 20px 30px;
+}
+
+#lista{
+    width: 50%;
+    margin: auto;
+    text-align: center; 
+    padding: 0px;
+    
+    
 }
 
 nav ul li {
@@ -22,7 +32,7 @@ nav ul li {
     margin: auto;
 }
   
-  nav ul li a{
+nav ul li a{
     background-color: white;
     border:2px solid #a52a2a;
     font-size: 14px;
@@ -48,7 +58,7 @@ nav ul li {
     text-align-last: center;
   }
   
-  nav li form{
+nav li form{
     display: inline block
 }
   
